@@ -186,6 +186,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - When using WF adaptations 'hide_decisions_when_under_writing', do not only show the decision to MeetingManagers but to
   every users able to edit the item, this way, used together with WF adaptation 'return_to_proposing_group', the decision
   is viewable by users that will correct the item
+- When duplicating an item, as field MeetingItem.otherMeetingConfigsClonableTo is kept, check that we may keep stored
+  value in case the configuration changed since the original item was created
 
 3.3 (2015-02-27)
 ----------------
